[gd_scene load_steps=16 format=3 uid="uid://d3ldqofc80lrh"]

[ext_resource type="PackedScene" uid="uid://dqnt5c2dlv0b" path="res://elements/enemy/projectiles/screen_projectile/screen_projectile.tscn" id="1_w8njh"]
[ext_resource type="WwiseEvent" uid="uid://c5l5w8l7tuuou" path="res://Wwise/resources/Event/{D090665C-0149-4F6B-9264-D00E3F97B5A1}.tres" id="2_q8a8g"]
[ext_resource type="PackedScene" uid="uid://bfe3ra50t87aq" path="res://elements/enemy/roboto_carpa/mesh/mesh_roboto_carpa.tscn" id="2_u02dk"]
[ext_resource type="PackedScene" uid="uid://os4mfmrwqkpx" path="res://elements/enemy/roboto_carpa/mesh/mesh_roboto_carpa_dead.tscn" id="3_hopq3"]
[ext_resource type="Script" uid="uid://b7n1kj0lt03wh" path="res://systems/utils/node3d_shaker.gd" id="3_oy73x"]
[ext_resource type="Script" uid="uid://5il3mf2ntjjf" path="res://elements/enemy/projectiles/screen_projectile/proj_carpa/screen_projectile_carpa.gd" id="4_84013"]
[ext_resource type="PackedScene" uid="uid://b6kqvet132sj3" path="res://systems/game/projectile_kill_proxy.tscn" id="5_ia7h7"]
[ext_resource type="Script" uid="uid://cr5xxhd04vkgu" path="res://addons/gap/api/accessibility_high_contrast_object.gd" id="5_yh5wx"]
[ext_resource type="WwiseEvent" uid="uid://b8c8ikagvs20x" path="res://Wwise/resources/Event/{867A91E8-DAFD-455F-B6ED-D403149BD67C}.tres" id="7_j2lnt"]

[sub_resource type="Curve" id="Curve_utmjp"]
_data = [Vector2(0, 0), 0.0, 0.153617, 0, 0, Vector2(0.45953, 0.532895), 2.27976, 2.27976, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_nwwpm"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 5), 0.0, 0.179982, 0, 0, Vector2(1, 0.97168), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_qvv7i"]
noise_type = 0
frequency = 0.0254
offset = Vector3(0, 196.08, 0)
fractal_octaves = 2
fractal_gain = 0.75

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_sawrk"]
width = 128
height = 128
seamless = true
noise = SubResource("FastNoiseLite_qvv7i")

[sub_resource type="Curve3D" id="Curve3D_f1dhh"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 15, 0, 0, 0, 0, -5, 0, 0, 15, 0, 0, 10, 0, 0, -7.26, 0, 0, 0, 0, 0, 20, 0),
"tilts": PackedFloat32Array(0, 2, 0)
}
point_count = 3

[sub_resource type="Curve3D" id="Curve3D_qkbc1"]
bake_interval = 0.15
_data = {
"points": PackedVector3Array(0, 0, 0, 2.5, 1, 1, 0, 0, -10, 2, -2, -1, -2, 2, 1, 0, 0, -7, -0.75, -1, -1, 0.75, 1, 1, 0, 0, -5, 0.2, -0.25, -1, -0.2, 0.75, 0.5, 0, 0, -2.5, 0, 0.25, -1, 0, 0, 0, 0, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="ScreenProjectile_Carpa" instance=ExtResource("1_w8njh")]
lerp_between_two_curves = SubResource("Curve_utmjp")
scale_over_time = SubResource("Curve_nwwpm")
total_projectile_time = 2.5
_sfx_impact = ExtResource("2_q8a8g")

[node name="roboto_carpa" parent="TheProjectile" index="0" instance=ExtResource("2_u02dk")]

[node name="Enemy Carpa Incoming SFX" type="AkEvent3D" parent="TheProjectile/roboto_carpa" index="2"]
event = ExtResource("7_j2lnt")
trigger_on = 1

[node name="AccessibilityHighContrastObject" type="Node" parent="TheProjectile/roboto_carpa" index="3"]
script = ExtResource("5_yh5wx")
high_contrast_group = &"danger"
metadata/_custom_type_script = "uid://cr5xxhd04vkgu"

[node name="Node3DShaker" type="Node3D" parent="TheProjectile" index="1"]
script = ExtResource("3_oy73x")
noise_texture = SubResource("NoiseTexture2D_sawrk")
shake_amplitude = 0.0
shake_frequency = 1.25
shake_y = false

[node name="roboto_carpa_dead" parent="TheProjectile/Node3DShaker" index="0" instance=ExtResource("3_hopq3")]
visible = false

[node name="AccessibilityHighContrastObject" type="Node" parent="TheProjectile/Node3DShaker/roboto_carpa_dead" index="8"]
script = ExtResource("5_yh5wx")
high_contrast_group = &"enemy"
metadata/_custom_type_script = "uid://cr5xxhd04vkgu"

[node name="dead_target" type="Marker3D" parent="TheProjectile" index="2"]
transform = Transform3D(1, 0, 0, 0, -0.99966, 0.0260897, 0, -0.0260897, -0.99966, 0, -0.852135, -0.25)

[node name="Path3D OUT CANNON" parent="." index="1"]
curve = SubResource("Curve3D_f1dhh")

[node name="Path3D IN CAMERA" parent="." index="2"]
curve = SubResource("Curve3D_qkbc1")

[node name="Carpa" type="Node" parent="." index="3"]
script = ExtResource("4_84013")

[node name="ProjectileKillProxy" parent="." index="4" instance=ExtResource("5_ia7h7")]

[connection signal="finished" from="." to="Carpa" method="_on_screen_projectile_carpa_finished"]
[connection signal="progress_raw" from="." to="Carpa" method="_on_screen_projectile_carpa_progress_raw"]
[connection signal="killed_projectile" from="ProjectileKillProxy" to="." method="_on_projectile_kill_proxy_killed_projectile"]
